===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12 to Asterisk 13 --------------------
------------------------------------------------------------------------------

Applications
--------------------------

ConfBridge
--------------------------
 * CONFBRIDGE dialplan function is now capable of creating/modifying dynamic
   conference user menus.

 * CONFBRIDGE dialplan function is now capable of removing dynamic conference
   menus, bridge settings, and user settings that have been applied by the
   CONFBRIDGE dialplan function.

 * The ConfBridge dialplan application now sets a channel variable,
   CONFBRIGE_RESULT, upon exiting. This variable can be used to determine
   how a channel exited the conference.

 * Added conference user option 'announce_join_leave_review'. This option
   implies 'announce_join_leave' with the added effect that the user will
   be asked if they want to confirm or re-record the recording of their
   name when entering the conference

Directory
--------------------------
 * At exit, the Directory application now sets a channel variable
   DIRECTORY_RESULT to one of the following based on the reason for exiting:
     OPERATOR    user requested operator by pressing '0' for operator
     ASSISTANT   user requested assistant by pressing '*' for assistant
     TIMEOUT     user pressed nothing and Directory stopped waiting
     HANGUP      user's channel hung up
     SELECTED    user selected a user from the directory and is routed
     USEREXIT    user pressed '#' from the selection prompt to exit
     FAILED      directory failed in a way that wasn't accounted for. Dang.

MusicOnHold
--------------------------
 * MusicOnHold streams (all modes other than "files") now support wide band
   audio too.

Page
--------------------------